# robotic-board-game

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  README.rst  agent_testing.py  agent_training.py  animate.py  astar_classes.puml  barplot.py  env_testing.py  evaluate.py  game_classes.puml  game_time_by_number_player.txt  iter.py  main.py  model_test.py  play.py  pyproject.toml  ray_train.py  requirements.txt  rlagent_classes.plantuml  sb3_train.py  sb3_wrapper.py  self-play.py  test.py  tian_testing.py  train.py  trainer_classes.plantuml  training_config.yaml  wrapper.py
Agents/: BoardSimulator.py  DefaultAgent.py  GameSimulator.py  RobotSimulator.py  VirtualBoard.py  VirtualCell.py  VirtualGame.py  VirtualRobot.py  __init__.py
DefaultAgent/: BoardSimulator.py  CellSimulator.py  DefaultAgent.py  GameSimulator.py  RobotSimulator.py  __init__.py
Game/: Board.py  Cell.py  Clock.py  Game.py  Mail.py  Robot.py  __init__.py  consts.py
configs/: agent_3.yaml  animate_config_template.yaml  config.yaml  training_config_template.yaml
docs/: requirements.txt
docs/source/: agent_doc.rst  agents.rst  animation.rst  api.rst  astar_agent.rst  conf.py  env_description.rst  environment.rst  evaluation.ipynb  index.rst  rl_agent.rst  rl_agent_doc.rst  usage.rst
multi_agent_trainer/: agent_testing.py  agent_training.py  env_testing.py
rbgame/: trainer.py
rbgame/agent/: astar_agent.py  base_agent.py  rl_agent.py
src/: App.py  Board.py  Cell.py  Clock.py  Computer.py  Game.py  Mail.py  Player.py  Robot.py  __init__.py  a_star_agent.py  consts.py  trainer.py
(+29 files in other folders)
