[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbgame"
authors = [{name = "Nguyen Thanh Trung", email = "nguyenthanhtrung291099@gmail.com"}]
version = "2024.0.0"
description = "Board game simulator."

dependencies = [
  "tianshou",
  "pygame",
  "pygame-menu",
  "pyyaml",
]